# Kafka-Desktop-Manager

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT_PLAN.md  README.md  README.zh-CN.md  SECURITY.md  TESTING.md  UI_TESTING.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
design-system/kafkamanager/: MASTER.md
e2e/: kafka-manager.spec.ts
src/: App.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: acl.rs  cluster.rs  connect.rs  consumer.rs  favorite.rs  group.rs  kafka_util.rs  message.rs  mod.rs  schema.rs  topic.rs
src-tauri/src/storage/: connection_repo.rs  mod.rs  settings_repo.rs
src-tauri/tests/: integration_tests.rs
src/components/acl/: AclListPanel.tsx  AddAclDialog.tsx
src/components/cluster/: BrokerDetailPanel.tsx  ClusterConfigEditDialog.tsx  ClusterDashboard.tsx  ClusterOverview.tsx  (+3 more)
src/contexts/: connectionDialogContext.tsx  dataDialogContext.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: connectionFormMap.ts  refreshActiveView.ts  tauri.ts  topicDataFileFormat.ts
src/stores/: clusterStore.ts  connectionStore.ts  messageStore.ts  settingsStore.ts  uiStore.ts
src/styles/: design-tokens.css
src/types/: index.ts
(+32 files in other folders)
