[package]
name = "kafka-desktop-manager"
version = "0.1.0"
description = "A modern, cross-platform desktop GUI for Apache Kafka built with Tauri, React and Rust."
authors = ["Jinjie He <jinjie_he@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/halo-hx/Kafka-Desktop-Manager"
homepage = "https://github.com/halo-hx/Kafka-Desktop-Manager"
readme = "../README.md"
keywords = ["kafka", "tauri", "gui", "desktop", "rust"]
categories = ["gui", "development-tools"]
rust-version = "1.77"

[lib]
name = "kafka_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
base64 = "0.22"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-mcp-bridge = "0.11"
rdkafka-sys = "4.10.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
